# foxtronpi-pyclient

./: .gitignore  CODEOWNERS  FoxPi_DTC.py  FoxPi_TP.py  FoxPi_read.py  FoxPi_write.py  LICENSE  README.md  UI.py  UI2.py  __init__.py  client_config.py  common.py  control_lamp_example.py  pyproject.toml  read.py  read_motion_status_example.py  read_vin.py  requirements.txt  write.py  write_vin.py
.github/: CODEOWNERS
